k8s/001_iis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: iis
  name: iis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: iis
  template:
    metadata:
      labels:
        name: iis
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: beta.kubernetes.io/os
                    operator: In
                    values:
                      - windows
      containers:
        - image: mcr.microsoft.com/windows/servercore/iis
          name: iis
          ports:
            - containerPort: 80
              name: http-server
