k8s/002_iis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: iis
  labels:
    name: iis
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    name: iis
