k8s/003_iis-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: iis
spec:
  rules:
    - host: iis.kube.maws.mr.dtcntr.net
      http:
        paths:
          - backend:
              serviceName: iis
              servicePort: 80
