k8s/003_iis_istio_gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: iis
spec:
  hosts:
    - iis.kube.maws.mr.dtcntr.net
  gateways:
    - istio-system/demo-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: iis
            port:
              number: 80
